...
  return (
    <View
      accessibilityLabel={t('a11y.card.actionsLabel')}
      accessibilityRole="toolbar"
      accessible
      style={[styles.container, style]}
      testID="card-status-actions"
    >
      {showTitle ? (
        <Body color={colors.textSecondary} style={styles.title}>
          {t('card.actions.title')}
        </Body>
      ) : null}
...
